# ammir

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  docker-compose.yml  launch_image.bash
.github/: pull_request_template.md
data/: README.md
docs/: README.md
scripts/: unit_test_simple_ml_pipeline.bash
src/: __init__.py
src/ammir/apis/: train_model.py
src/ammir/utils/: datasets.py  utils.py
tests/: config_test.yml  test_simple_ml_pipeline.py
